objects/CRM_ZipCodeReferenceData__c.object
<CustomObject>
    <description>Stores the zip codes and its mapping to specified CBSA, County, City</description>
    <fields>
        <fullName>CRM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to check whether the record is active/ inactive</description>
        <inlineHelpText>Check the box to active /inactive the record</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Location__c</fullName>
        <description>Describes the Location based on Latitute nad Longitude</description>
        <inlineHelpText>Enter the Latitute and Longitude values</inlineHelpText>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CRM_ZipCode__c</fullName>
        <description>Displays the zipCode for the hospital</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the ZipCode for the Hospital</inlineHelpText>
        <label>ZIP Code</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_ZipsCBSAID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip&apos;s CBSA ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match CBSA filter criteria.</errorMessage>
            <filterItems>
                <field>CRM_CampaignGeographyReferenceData__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CBSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_CampaignGeographyReferenceData__c</referenceTo>
        <relationshipName>CRM_CountyRelatedZipCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_ZipsCBSAName__c</fullName>
        <description>Shows the CBSA name for the selected Zip</description>
        <formula>CRM_ZipsCBSAID__r.CRM_CBSA__c</formula>
        <inlineHelpText>Shows the CBSA name for the selected Zip</inlineHelpText>
        <label>Zip&apos;s CBSA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ZipsCountyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip&apos;s County ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match County filter criteria.</errorMessage>
            <filterItems>
                <field>CRM_CampaignGeographyReferenceData__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>County</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_CampaignGeographyReferenceData__c</referenceTo>
        <relationshipName>CRM_CountyRelatedZipCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_ZipsCountyName__c</fullName>
        <description>Shows County Name for the Selected Zip Code</description>
        <formula>CRM_ZipsCountyID__r.CRM_County__c</formula>
        <inlineHelpText>Shows County Name for the Selected Zip Code</inlineHelpText>
        <label>Zip&apos;s County Name</label>
        <type>Text</type>
    </fields>
    <label>Ref Data - Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_ZipCode__c</columns>
        <columns>CRM_ZipsCountyName__c</columns>
        <columns>CRM_ZipsCBSAName__c</columns>
        <columns>CRM_ZipsCBSAID__c</columns>
        <columns>CRM_ZipsCountyID__c</columns>
        <columns>CRM_Location__Latitude__s</columns>
        <columns>CRM_Location__Longitude__s</columns>
        <columns>CRM_IsActive__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CZRD-{0000000}</displayFormat>
        <label>Zip Reference Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ref Data - Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zip_code_number</fullName>
        <active>true</active>
        <description>Validation to ensure only numbers are added to the zip code</description>
        <errorConditionFormula>OR (NOT(ISNUMBER(CRM_ZipCode__c)), LEN(CRM_ZipCode__c)!= 5)</errorConditionFormula>
        <errorDisplayField>CRM_ZipCode__c</errorDisplayField>
        <errorMessage>Invalid Zip Code</errorMessage>
    </validationRules>
</CustomObject>